fix covering navbar border

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1263,7 +1263,7 @@ textarea.form-control {
 
   &.sticky-top {
     padding: 20px 0;
-    top: 4.35em;
+    top: 4.40em;
   }
 
   .input-group {
